# Fundacion_Valle_Lili_V1

./: .env.example  .gitignore  CLAUDE.md  Fix_ Herramienta estructurada y enrutamiento EPS_convenios.md  LICENSE  Makefile  README.md  debug_search.py  diagnostico_selector.py  pyproject.toml
.chroma/: chroma.sqlite3
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-investigacion.yml  02-scraping.yml  03-kb-datos.yml  04-qa-prompt.yml  05-streamlit.yml  06-documentacion.yml
.streamlit/: config.toml
app/: engine.py  knowledge_loader.py  main.py  retriever.py
data/: debug_context.txt  debug_context_raw.txt
data/structured/: fvl_info.json
docs/: README.md  adr-001-modular-pipeline.md  adr-002-public-sources-first.md  alcance.md  fuentes.md  guia_exposicion.md  informe.md  informe_ieee.md  kb_stats.md  milestones_backlog.md  prompt_experiments.md  qa_test_results.md  registro_cambios_modulo1.md  resultados_ejemplos.md  runbook.md  testing.md  troubleshooting.md  workflow_git.md
scraper/: fvl_scraper.py
src/app/: engine.py  main.py
src/app_agent/: __init__.py  agent.py  engine.py  tools.py
src/rag/: __init__.py  indexer.py  retriever.py
src/semantic_layer_fvl/: __init__.py  cli.py  domains.py  news_feeds.py
src/semantic_layer_fvl/api/: __init__.py  app.py  routes.py
src/semantic_layer_fvl/config/: __init__.py  logging.py  settings.py
src/semantic_layer_fvl/extractors/: __init__.py  google_news.py  http_client.py  news.py  robots.py  site_map.py  sitemap_extractor.py  web_crawler.py  youtube.py  youtube_rich.py
src/semantic_layer_fvl/orchestrator/: __init__.py  pipeline.py
src/semantic_layer_fvl/processors/: __init__.py  chunker.py  cleaner.py  deduplicator.py  noise_presets.py  structurer.py
src/semantic_layer_fvl/schemas/: __init__.py  documents.py  runs.py
src/semantic_layer_fvl/writers/: __init__.py  base.py  markdown_writer.py  vectorstore_writer.py
tests/: conftest.py  qa_questions.md  test_api.py  test_chunker.py  test_cleaner.py  test_cleaner_presets.py  test_cli.py  test_deduplicator.py  test_google_news.py  test_http_client.py  test_http_retry.py  test_markdown_writer.py  test_news_extractor.py  test_news_html_cleanup.py  test_pipeline.py  test_pipeline_feeds.py  test_pipeline_runs.py  test_rag_agent.py  test_rag_engine.py  test_rag_indexer.py  test_rag_retriever.py  test_rag_tools.py  test_robots.py  test_schemas.py  test_settings.py  test_site_map.py  test_structured_tool.py  test_structurer.py  test_structurer_slug.py  test_vectorstore.py  test_vectorstore_writer.py  test_web_crawler.py  test_youtube_extractor.py  test_youtube_rich.py
