[project]
name = "plan-capa-semantica"
version = "0.1.0"
description = "Base del proyecto para construir la capa semantica de la Fundacion Valle del Lili."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28,<0.29",
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.10,<3.0",
    "chromadb>=1.0,<2.0",
    "sentence-transformers>=4.0,<5.0",
    "pyyaml>=6.0,<7.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.scripts]
semantic-layer-fvl = "semantic_layer_fvl.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4,<9.0",
    "ruff>=0.9,<1.0",
]
app = [
    "langchain>=0.3,<1.0",
    "langchain-ollama>=0.3,<1.0",
    "sentence-transformers>=4.0,<5.0",
    "streamlit>=1.40,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_layer_fvl"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
