[project]
name = "chatbot-fvl"
version = "1.0.0"
description = "Módulo 1 — Chatbot corporativo para la Fundación Valle del Lili (Context Stuffing, sin RAG)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Scraping
    "selenium>=4.20,<5.0",
    "beautifulsoup4>=4.12,<5.0",
    "requests>=2.31,<3.0",
    "webdriver-manager>=4.0,<5.0",
    # LangChain + OpenAI
    "langchain>=0.3,<1.0",
    "langchain-openai>=0.2,<1.0",
    "openai>=1.50,<2.0",
    # Interfaz
    "streamlit>=1.40,<2.0",
    # Utils
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4,<9.0",
    "ruff>=0.9,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper", "app"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
