[project]
name = "chatbot-fvl"
version = "1.0.0"
description = "Asistente virtual con agente RAG para la Fundación Valle del Lili (FVL), Cali, Colombia."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Espe-IA-2026", email = "mateo.gonzalez_ruiz@uao.edu.co" },
]
keywords = ["chatbot", "rag", "langchain", "fundacion-valle-del-lili", "nlp"]
requires-python = ">=3.11,<3.14"
dependencies = [
    "beautifulsoup4>=4.12,<5.0",
    "httpx>=0.27,<1.0",
    "requests>=2.31,<3.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.10,<3.0",
    "markdownify>=0.12,<1.0",
    "yt-dlp>=2024.10.0",
    "openai>=1.40,<2.0",
    "streamlit>=1.35,<2.0",
    "chromadb>=1.5.9",
    "langchain>=1.2.18",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.4,<9.0",
    "ruff>=0.9,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
semantic-layer-fvl = "semantic_layer_fvl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_layer_fvl","src/app","src/rag","src/app_agent"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
filterwarnings = [
    "ignore:The default value of `allowed_objects`:DeprecationWarning:langgraph",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
